# sorry-game

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: .env.example  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.html
frontend/src/lib/: theme-context.svelte.ts  wasm-worker.ts  wasm.ts  worker.ts
frontend/src/lib/board/: BoardCanvas.svelte  a11y.ts  actions.ts  active-card.ts  animator.ts  assets.ts  cards.ts  geometry.ts  history-cursor.ts  interaction.ts  paths.ts  prefabs.ts  renderer.ts  replay.ts  (+5 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/models/: ATTRIBUTION.txt  Game_Piece_mm.glb
sorry-core/: Cargo.toml
sorry-core/src/: board.rs  card.rs  engine.rs  error.rs  game.rs  geometry.rs  history.rs  interactive.rs  lib.rs  moves.rs  rules.rs  simulator.rs  strategy.rs
sorry-core/src/strategies/: greedy.rs  loser.rs  mod.rs  not_sorry.rs  random.rs  reverse.rs  sidekick.rs  survivor.rs  teleporter.rs  util.rs
sorry-core/tests/: deterministic_replay.rs  full_game.rs  interactive.rs  scenarios.rs  serialization.rs  simulator_determinism.rs  strategy_scenarios.rs
sorry-server/: Cargo.toml
sorry-server/src/: lib.rs  lobby.rs  main.rs  messages.rs  room.rs  session.rs  strategies.rs  ws.rs
sorry-server/tests/: lobby.rs  room_roles.rs  ws.rs
sorry-wasm/: Cargo.toml
sorry-wasm/src/: lib.rs
sorry-wasm/tests/: interactive_bridge.rs
(+33 files in other folders)
