[package]
name = "sorry-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sorry-core = { path = "../sorry-core" }
getrandom = { version = "0.2", features = ["js"] }
